--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+#  google_fonts: ^6.2.1
+#  path_provider: ^2.1.5
   cupertino_icons: ^1.0.8
+
   get: ^4.6.6
   fl_chart: ^0.70.2
   carousel_slider: ^5.0.0
   http: ^1.3.0
   youtube_player_flutter: ^9.1.1
   linear_progress_bar: ^1.1.3
-#  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
     - assets/package/img/
     - assets/package/bgImg/
     - assets/rewards/img/
+    - assets/cart/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
