--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.3.0
   youtube_player_flutter: ^9.1.1
   linear_progress_bar: ^1.1.3
+  palette_generator: ^0.3.3+6
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
     - assets/package/bgImg/
     - assets/rewards/img/
     - assets/cart/img/
+    - assets/vendor/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
