--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/img/
     - assets/vid/
     - assets/package/img/
+    - assets/package/new_img/
     - assets/package/bgImg/
     - assets/rewards/img/
     - assets/cart/img/
